public interface IAudioBook {

    int getDurationInMinutes();
}
